--- a/app/src/main/res/layout/cars_list_row.xml
+++ b/app/src/main/res/layout/cars_list_row.xml
@@ -5,29 +5,29 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/cars_list_manufacturer"
+        android:id="@+id/cars_list_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
+        android:layout_gravity="center_vertical"
         android:textAppearance="?attr/textAppearanceListItem"
-        android:text="AUDI"/>
+        android:text="2016"/>
 
     <TextView
         android:id="@+id/cars_list_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:layout_marginStart="200dp"
         android:layout_weight="1"
         android:textAppearance="?attr/textAppearanceListItem"
         android:text="A3"/>
 
-    <TextView
-        android:id="@+id/cars_list_year"
+    <ImageButton
+        android:id="@+id/cars_list_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:text="2016"/>
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/ic_directions_run_black_24dp"
+        />
 
 </LinearLayout>
