--- a/app/src/main/res/layout/content_dash_board.xml
+++ b/app/src/main/res/layout/content_dash_board.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.texocoyotl.ptedmundscars.DashBoardActivity"
+    tools:context=".activities.dashboard.DashBoardActivity"
     tools:showIn="@layout/activity_dash_board">
 
 
