--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,14 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="AppTheme.Base">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="AppTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
+
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -16,5 +19,33 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
+    <style name="Details.GridTitle" parent="">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:gravity">start</item>
+        <item name="android:layout_marginTop">24dp</item>
+    </style>
+
+    <style name="Details.GridText" parent="">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="Details.GridSecondText" parent="Details.GridText">
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
+
+    <style name="Details.GridFirstLabel" parent="Details.GridText">
+        <item name="android:layout_gravity">center_horizontal|start</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="Details.GridSecondLabel" parent="Details.GridFirstLabel">
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
+
 
 </resources>
