--- a/app/src/main/res/layout/content_gallery.xml
+++ b/app/src/main/res/layout/content_gallery.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnCount="2"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -13,25 +12,18 @@
     tools:context="com.texocoyotl.ptedmundscars.activities.gallery.GalleryActivity"
     tools:showIn="@layout/activity_gallery">
 
-    <ImageView
-        android:id="@+id/gallery_img1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-    <ImageView
-        android:id="@+id/gallery_img2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-    <ImageView
-        android:id="@+id/gallery_img3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-    <ImageView
-        android:id="@+id/gallery_img4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</GridLayout>
+        <GridLayout
+            android:id="@+id/gallery_grid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="2">
+
+
+
+        </GridLayout>
+    </ScrollView>
+</FrameLayout>
