--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,12 +26,15 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:gravity">start</item>
         <item name="android:layout_marginTop">24dp</item>
+        <item name="android:textSize">34sp</item>
     </style>
 
     <style name="Details.GridText" parent="">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">right</item>
+        <item name="android:gravity">right</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="Details.GridSecondText" parent="Details.GridText">
