Refactoring and general code clean-up

--- a/app/src/main/res/layout/cars_list_row.xml
+++ b/app/src/main/res/layout/cars_list_row.xml
@@ -8,10 +8,10 @@
         android:id="@+id/cars_list_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
         android:layout_gravity="center_vertical"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:text="2016"/>
+        android:layout_margin="@dimen/text_margin"
+        android:text="2016"
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
         android:id="@+id/cars_list_name"
@@ -19,15 +19,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:layout_weight="1"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:text="A3"/>
+        android:text="A3"
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <ImageButton
         android:id="@+id/cars_list_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
-        />
+        android:background="@drawable/ic_keyboard_arrow_right_black_24dp" />
 
 </LinearLayout>
