--- a/app/src/main/res/layout/makers_spinner_row.xml
+++ b/app/src/main/res/layout/makers_spinner_row.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     android:padding="8dp">
 
     <ImageView
@@ -9,12 +10,12 @@
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_marginRight="24dp"
-        />
+        android:contentDescription="@string/content_description_manufacturer_logo" />
 
     <TextView
         android:id="@+id/makers_spinner_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center" />
 
 </LinearLayout>
