--- a/app/src/main/res/layout/content_dash_board.xml
+++ b/app/src/main/res/layout/content_dash_board.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,16 +30,16 @@
                 android:orientation="vertical">
 
                 <Spinner
+                    android:id="@+id/dashboard_makers"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/dashboard_makers"
                     android:layout_gravity="center_horizontal"
                     android:padding="8dp" />
 
                 <Spinner
+                    android:id="@+id/dashboard_models"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/dashboard_models"
                     android:layout_gravity="center_horizontal"
                     android:padding="8dp" />
 
@@ -48,11 +49,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_search_black_36dp"
-                android:padding="16dp"
                 android:layout_margin="16dp"
+                android:background="@drawable/ic_search_black_36dp"
                 android:onClick="updateStylesList"
-                />
+                android:padding="16dp" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -61,6 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp">
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
