--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
         android:layout_margin="@dimen/fab_margin"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="@dimen/fab_margin_top"
         android:src="@drawable/ic_photo_camera_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
