--- a/app/src/main/res/layout/content_dash_board.xml
+++ b/app/src/main/res/layout/content_dash_board.xml
@@ -16,7 +16,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="@dimen/medium_padding">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,14 +34,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:padding="8dp" />
+                    android:padding="@dimen/field_padding" />
 
                 <Spinner
                     android:id="@+id/dashboard_models"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:padding="8dp" />
+                    android:padding="@dimen/field_padding" />
 
             </LinearLayout>
 
@@ -49,10 +49,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="16dp"
+                android:layout_margin="@dimen/medium_padding"
                 android:background="@drawable/ic_search_black_36dp"
                 android:onClick="updateStylesList"
-                android:padding="16dp" />
+                android:padding="@dimen/medium_padding" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -60,7 +60,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="8dp">
+        android:layout_marginTop="@dimen/field_padding">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -85,8 +85,8 @@
                 android:name="com.texocoyotl.ptedmundscars.CarItemFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginLeft="@dimen/medium_padding"
+                android:layout_marginRight="@dimen/medium_padding"
                 app:layoutManager="LinearLayoutManager"
                 tools:listitem="@layout/cars_list_row" />
         </FrameLayout>
