--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/detail_activity_horizontal_margin"
     android:paddingRight="@dimen/detail_activity_horizontal_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.texocoyotl.ptedmundscars.activities.detail.DetailActivity"
+    tools:context=".views.activities.detail.DetailActivity"
     tools:showIn="@layout/activity_detail">
 
     <LinearLayout
