--- a/app/src/main/res/layout/content_gallery.xml
+++ b/app/src/main/res/layout/content_gallery.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.texocoyotl.ptedmundscars.activities.gallery.GalleryActivity"
+    tools:context=".views.activities.gallery.GalleryActivity"
     tools:showIn="@layout/activity_gallery">
 
     <ScrollView
